# BarelangFC_ROS2

src/main_interface/: CMakeLists.txt  package.xml
src/main_interface/msg/: Angle.msg  BallCoor.msg  BallDistance.msg  Button.msg  Coordination.msg  GameController.msg  HeadingCoor.msg  Localization.msg  Odometry.msg  OpenCr.msg  RobotCaseState.msg  RobotGridPos.msg  RobotStatus.msg  ServPos.msg  VisionGoal.msg  WalkCommand.msg
src/motion/: CMakeLists.txt  package.xml
src/motion/include/: motion.h
src/motion/src/: motion.cpp
src/motion/src/source_code/Player/: SensorNote
src/particle_filter_sim/: package.xml  setup.cfg  setup.py
src/particle_filter_sim/particle_filter_sim/: particle_filter_sim_1.py
src/sensor/: CMakeLists.txt  package.xml
src/sensor/include/: sensor.h
src/sensor/src/: sensor.cpp
src/strategy/: CMakeLists.txt  package.xml
src/strategy/include/: strategy.h
src/strategy/src/: strategy.cpp
src/vision/: CMakeLists.txt  package.xml
src/vision/include/: vision.h
src/vision/src/: vision.cpp
